# VVA

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Dockerfile  README.md  README_PRO.md  TECHNICAL_DEFENSE.md  docker-compose.yml  install.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: mosquitto.conf
main/: main (1).py
tests/: conftest.py  test_color.py  test_events.py  test_health.py  test_hrtf.py  test_i18n.py  test_monitoring.py  test_pit.py  test_privacy.py  test_retry.py  test_safe_subprocess.py  test_settings.py  test_spatial.py  test_spatial_panner.py  test_tracking.py  test_types.py  test_v2x.py
visionvoiceasist/: __init__.py  __main__.py  cli.py  events.py  health.py  i18n.py  monitoring.py  runtime.py  settings.py  types.py
visionvoiceasist/ai/: __init__.py  base.py  gemini.py  local_vlm.py  router.py  voice_query.py
visionvoiceasist/audio/: __init__.py  hrtf.py  player.py  providers.py  spatial.py  speech.py
visionvoiceasist/dashboard/: __init__.py  app.py
visionvoiceasist/hardware/: __init__.py  haptics.py  imu.py
visionvoiceasist/iot/: __init__.py  v2x_client.py
visionvoiceasist/ui/: __init__.py  overlay.py
visionvoiceasist/utils/: __init__.py  device.py  logging.py  retry.py  safe_subprocess.py
visionvoiceasist/vision/: __init__.py  camera.py  color.py  detector.py  ocr.py  pit.py  privacy.py  spatial.py  tracking.py
vva/: config.py  main.py  utils.py
vva/audio/: speaker.py
vva/hardware/: glasses.py
vva/vision/: camera.py  detector.py
